--- a/ReadMe
+++ b/ReadMe
@@ -1,1 +1,13 @@
+----------------------
+Command Line Arguments
+----------------------
+Examples: 
+karolin kathrin
+1011101 1001001
 
+---------
+Included
+---------
+All source files (.cpp, .hpp)
+this ReadMe
+Makefile
